# slackdump2markdown

./: .gitignore  README.md  main.py  pyproject.toml
